--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Aleksa Stajić — Portfolio</title>
+  <title>Aleksa Stajić - Portfolio</title>
   <meta name="description" content="Aleksa Stajic — backend & full-stack engineer. Java, Spring Boot, Python. Projects, GitHub, contact." />
   <meta property="og:title" content="Aleksa Stajic — Portfolio">
   <meta property="og:description" content="Backend & full-stack engineer — projects, GitHub, contact.">
@@ -17,7 +17,7 @@
 <body>
   <a class="skip-link" href="#main-content">Skip to content</a>
   <noscript>
-    <div class="noscript">JavaScript is disabled — some content (projects, theme) may be unavailable.</div>
+    <div class="noscript">JavaScript is disabled - some content (projects, theme) may be unavailable.</div>
   </noscript>
   <header class="site-header">
     <div class="container header-inner">
@@ -36,7 +36,7 @@
       <div class="container hero-grid">
         <div>
           <h1 id="hero-name">Aleksa Stajić</h1>
-          <p class="lead" id="hero-tagline">Backend & full-stack engineer — Java, Spring Boot, systems & APIs.</p>
+          <p class="lead" id="hero-tagline">Backend & full-stack engineer - Java, Spring Boot, systems & APIs.</p>
           <p id="hero-bio">I design and implement reliable backend systems with a focus on data integrity, idempotent operations, and clean APIs.</p>
           <div class="hero-cta">
             <a class="btn-primary" id="download-resume" href="/resume.pdf" download>Download Resume</a>
