feat: refresh homepage layout and featured projects

--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Aleksa Stajić - Portfolio</title>
-  <meta name="description" content="Aleksa Stajic — backend & full-stack engineer. Java, Spring Boot, Python. Projects, GitHub, contact." />
-  <meta property="og:title" content="Aleksa Stajic — Portfolio">
-  <meta property="og:description" content="Backend & full-stack engineer — projects, GitHub, contact.">
+  <meta name="description" content="Aleksa Stajić - Backend SWE / DevOps internship candidate (Expected 2026). Projects, skills." />
+  <meta property="og:title" content="Aleksa Stajić - Portfolio">
+  <meta property="og:description" content="Backend SWE / DevOps internship candidate (Expected 2026). Projects, skills.">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="theme-color" content="#071025">
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -19,75 +17,61 @@
   <noscript>
     <div class="noscript">JavaScript is disabled - some content (projects, theme) may be unavailable.</div>
   </noscript>
-  <header class="site-header">
-    <div class="container header-inner">
-      <div class="brand"></div>
-      <nav class="nav">
-        <a href="#projects">Projects</a>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
-        <a class="btn-outline" id="github-link" href="https://github.com/aleksastajic" target="_blank" rel="noopener noreferrer">GitHub</a>
-      </nav>
-    </div>
-  </header>
-
   <main id="main-content">
-    <section class="hero">
+    <section class="hero" id="top">
       <div class="container hero-grid">
-        <div>
-          <h1 id="hero-name">Aleksa Stajić</h1>
-          <p class="lead" id="hero-tagline">Backend & full-stack engineer - Java, Spring Boot, systems & APIs.</p>
-          <p id="hero-bio">I design and implement reliable backend systems with a focus on data integrity, idempotent operations, and clean APIs.</p>
-          <div class="hero-cta">
-            <a class="btn-primary" id="download-resume" href="/resume.pdf" download>Download Resume</a>
+        <div class="hero-copy">
+          <p class="eyebrow">Backend SWE / DevOps internship candidate (Expected 2026)</p>
+          <h1>Aleksa Stajić</h1>
+          <p class="lead">Final-year student building backend services with a focus on reliability and clean APIs</p>
+          <p class="meta-line">Belgrade, Serbia</p>
+          <p class="prose">Open to backend SWE and DevOps/cloud internship roles; happy to learn new tools quickly.</p>
+          <div class="hero-actions">
+            <a class="btn-primary" href="cv/resume.pdf" target="_blank" rel="noopener noreferrer">View CV (PDF)</a>
+            <a class="btn-ghost" href="mailto:stajic1210@gmail.com">Email</a>
+          </div>
+          <div class="link-row">
+            <a href="https://github.com/aleksastajic" target="_blank" rel="noopener noreferrer">GitHub</a>
+            <a href="https://www.linkedin.com/in/aleksastajic" target="_blank" rel="noopener noreferrer">LinkedIn</a>
           </div>
         </div>
-        <aside class="profile-card">
-          <img class="profile-photo" src="assets/favicon.svg" alt="Aleksa Stajić" width="96" height="96">
-          <div class="profile-info">
-            <p class="muted">Based in Belgrade, Serbia</p>
-            <p id="availability">Available for collaboration & roles</p>
-            <div class="socials">
-              <a id="link-linkedin" href="https://www.linkedin.com/in/aleksastajic" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
-                <svg width="18" height="18" viewBox="0 0 24 24" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"><path fill="currentColor" d="M20.452 20.452h-3.554v-5.569c0-1.329-.024-3.039-1.852-3.039-1.853 0-2.136 1.445-2.136 2.939v5.669H8.368V9h3.414v1.561h.049c.476-.9 1.637-1.852 3.369-1.852 3.602 0 4.269 2.369 4.269 5.451v6.292zM5.337 7.433a2.062 2.062 0 1 1 .001-4.124 2.062 2.062 0 0 1-.001 4.124zM6.983 20.452H3.691V9h3.292v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.727v20.545C0 23.226.792 24 1.771 24h20.451C23.2 24 24 23.226 24 22.273V1.727C24 .774 23.2 0 22.225 0z"/></svg>
-              </a>
-              <a id="profile-github" class="profile-github" href="#" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
-                <svg width="18" height="18" viewBox="0 0 24 24" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"><path fill="currentColor" d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.387.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.416-4.042-1.416-.546-1.387-1.333-1.757-1.333-1.757-1.089-.744.084-.729.084-.729 1.205.085 1.84 1.236 1.84 1.236 1.07 1.834 2.809 1.304 3.495.997.108-.775.418-1.304.76-1.604-2.665-.305-5.467-1.332-5.467-5.93 0-1.31.467-2.381 1.235-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23a11.52 11.52 0 0 1 3.003-.404c1.018.005 2.042.138 3.003.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.233 1.911 1.233 3.221 0 4.61-2.807 5.624-5.479 5.92.43.37.814 1.102.814 2.222 0 1.604-.015 2.896-.015 3.293 0 .32.216.694.825.576C20.565 22.092 24 17.592 24 12.297 24 5.67 18.627.297 12 .297z"/></svg>
-              </a>
-            </div>
-            <p class="contact-text">stajic1210@gmail.com</p>
-          </div>
+        <aside class="hero-card" aria-label="Focus areas">
+          <h2>Focus areas</h2>
+          <ul>
+            <li>Backend services with Java and Spring Boot</li>
+            <li>PostgreSQL data modeling and reliable transactions</li>
+            <li>CI/CD, containers, and observability basics</li>
+          </ul>
         </aside>
       </div>
     </section>
 
-    <section id="projects" class="projects container">
+    <section id="projects" class="projects container section">
       <div class="section-head">
-        <h2>Selected projects</h2>
+        <h2>Featured projects</h2>
       </div>
-
+      <p class="prose">Featured projects with quickstart steps and demos in their READMEs.</p>
       <div id="projects-grid" class="grid"></div>
     </section>
 
-    <section id="about" class="about container">
-      <h2>About</h2>
-      <p>I build reliable backends and am expanding into DevOps and SRE responsibilities: designing robust CI/CD pipelines, infrastructure-as-code, container orchestration, and production observability. I enjoy automating operational workflows and improving system reliability at scale.</p>
-      <ul class="skills">
-        <li>Java & Spring Boot</li>
-        <li>PostgreSQL, PL/pgSQL</li>
-        <li>REST APIs & idempotency</li>
-        <li>Python automation & tooling</li>
-        <li>Docker & CI</li>
-      </ul>
+    <section id="skills" class="about container section">
+      <h2>Skills</h2>
+      <div class="skills-grid">
+        <div class="skill-card">
+          <h3>Backend</h3>
+          <p>Java, Spring Boot, REST APIs, PostgreSQL, Python (FastAPI)</p>
+        </div>
+        <div class="skill-card">
+          <h3>DevOps / Cloud</h3>
+          <p>Docker, CI/CD, GitHub Actions, Linux</p>
+        </div>
+        <div class="skill-card">
+          <h3>Quality & Tooling</h3>
+          <p>Testing (JUnit/Testcontainers), logging, metrics, Python automation</p>
+        </div>
+      </div>
     </section>
 
-    <section id="contact" class="contact container">
-      <h2>Contact</h2>
-      <p>If you'd like to discuss a role, project, or collaboration, reach out below.</p>
-            <p>
-        <a class="btn-primary" href="mailto:aleksastajic@example.com" id="contact-email">Email me</a>
-      </p>
-    </section>
   </main>
 
   <footer class="site-footer">
